# Intelligent-Enterprise-Document-Analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  BOOTSTRAP_SUMMARY.md  EXPLANATION.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: settings.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: __init__.py
src/iedp/: __init__.py  agents.py  cli.py  config.py  logging_config.py  main.py  multimodal.py  retrieval.py
src/iedp/api/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_config.py  test_logging.py
